fix: adjust error text font size on mobile

--- a/assets/scss/_custom_primevue.scss
+++ b/assets/scss/_custom_primevue.scss
@@ -138,6 +138,10 @@
   .p-dropdown-panel .p-dropdown-item {
     font-size: var(--font-size-xxs);
   }
+
+  .p-error {
+    font-size: var(--font-size-xxs);
+  }
 }
 
 @media screen and (min-width: 768px) {
